# whoisrgj_blog

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_pages_table.py  0003_add_nav_links_table.py  0004_add_social_links_table.py  0007_add_custom_label_and_url_to_nav_links.py  0008_add_site_profile.py  0009_add_post_media_table.py  0010_add_post_media_image_url.py  6aad2605741b_add_wanted_countries_table.py  bd16671da556_add_visited_countries_table.py
backend/app/: auth.py  config.py  database.py  limiter.py  main.py
backend/app/models/: __init__.py  nav_link.py  page.py  post.py  post_media.py  site_profile.py  social_link.py  tag.py  user.py  visited_country.py  wanted_country.py
backend/app/routers/: admin.py  auth.py  letterboxd.py  nav.py  pages.py  posts.py  profile.py  rawg.py  social.py  travels.py
backend/app/schemas/: auth.py  nav_link.py  page.py  post.py  post_media.py  site_profile.py  social_link.py  tag.py  visited_country.py  wanted_country.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_auth.py  test_letterboxd.py  test_pages_admin.py  test_posts_admin.py  test_posts_public.py  test_rawg.py  test_travels_admin.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: BioWidget.jsx  Footer.jsx  GameInfoPanel.jsx  LetterboxdWidget.jsx  MarkdownRenderer.jsx  Navbar.jsx  PostCard.jsx  ProtectedRoute.jsx  Sidebar.jsx  TagBadge.jsx  TerminalBlock.jsx  ThemeToggle.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/data/: countryMeta.js
frontend/src/pages/: Home.jsx  Login.jsx  Page.jsx  Post.jsx  TagFeed.jsx  Travels.jsx
frontend/src/pages/admin/: BioSettings.jsx  Dashboard.jsx  GameSearch.jsx  NavSettings.jsx  PageEditor.jsx  PasswordSettings.jsx  PostEditor.jsx  SocialSettings.jsx  TravelSettings.jsx
frontend/src/utils/: date.js
